fix: resolve all PMD and Checkstyle violations
- Add @Override annotations (MissingOverride)
- Split multi-declarations (OneDeclarationPerLine)
- Change concrete types to interfaces (LooseCoupling)
- Replace == with .equals() on objects (CompareObjectsWithEquals)
- Add default branches to switch (NonExhaustiveSwitch)
- Replace <3 branch switches with if-else (TooFewBranchesForSwitch)
- Rename fields matching method/type names
- Move assignments out of conditions (AssignmentInOperand)
- Use try-with-resources for IO resources (CloseResource)
- Catch Exception instead of Throwable (AvoidCatchingThrowable)
- Add comments to empty catch blocks (EmptyCatchBlock)
- Remove unused params, methods, fields, vars, assignments
- Return empty collections instead of null
- Chain StringBuilder.append() calls
- Use local vars instead of reassigning params
- Preserve stack traces in thrown exceptions
- Extract hardcoded IPs to constants
- Use varargs, isEmpty(), Locale.toUpperCase(), append(char)
- Use System.arraycopy, return array copies, copy stored arrays
- Fix import ordering and remove unused imports (Checkstyle)
- Add blank lines between method defs (Checkstyle)
- Update PMD ruleset with framework-required excludes
- Configure CloseResource to ignore NeoForge AutoCloseable types